# uf-dps3xx

./: Cargo.toml  README.md  justfile
.github/workflows/: CI.yml
examples/: simple.rs
src/: bus.rs  config.rs  core.rs  device.rs  lib.rs  register.rs
tests/: integration_tests.rs
