[package]
name = "uf-dps310"
edition = "2021"
version = "0.1.0"
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
description = "A platform agnostic driver for DPS310 through I2C"

readme = "README.md"
keywords = [
  "embedded-hal-driver",
  "pressure",
  "temperature",
  "sensor",
  "DPS310",
]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
homepage = "https://github.com/jettify/uf-dps310"
repository = "https://github.com/jettify/uf-dps310"

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1" }


[features]
"defmt" = ["dep:defmt"]
